# agent-arcade

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  blog.md  cliff.toml  electron-builder.json  package-lock.json  package.json  playwright.config.ts  tsconfig.main.json  tsconfig.renderer.json  videos.md
.copilot/session-state/85f99126-724a-419c-a225-1ca9392f4d30/: plan.md
.github/: CODEOWNERS  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  new-game-proposal.yml  new-game.yml
.github/skills/: new-game.md
.github/skills/scaffold-game/: SKILL.md
.github/workflows/: build.yml  ci.yml  deploy-pages.yml
docs/: index.html  macos-gatekeeper-bypass.md  script.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: main.ts  preload.ts
src/game/: game.ts  hud.js  index.html
src/game/scenes/: AgentDrift.ts  AgentGalaxy.ts  AgentNinja.ts  AlienOnslaught.ts  BaseScene.ts  CodeBreaker.ts  CosmicRocks.ts  GalaxyBlaster.ts  GalaxyShooter.ts  NinjaRunner.ts  PlanetGuard.ts  PlanetGuardian.ts  wordlist.ts
src/main/: main.ts  preload.ts
src/renderer/: game.ts  index.html  sprite-atlas.ts
src/renderer/scenes/: BaseScene.ts  PixelGalaxy.ts  PixelNinja.ts  PixelPlumber.ts
tests/: alien-onslaught.spec.ts  app.spec.ts  code-breaker.spec.ts  cosmic-rocks.spec.ts  focus-clickthrough.spec.ts  galaxy-blaster.spec.ts  helpers.ts  ninja-runner.spec.ts  viewport-test.spec.ts
